2006-10-10  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/mist/src/mist-style.c: 
	- Merge Tab function into Extension
	- Replace common return if.... with CHECK_ARGS macro

2006-10-10  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/glide/src/glide_gtk2_drawing.c: 
	* engines/glide/src/glide_gtk2_engine.c:
	* engines/glide/src/glide_gtk2_engine.h:
	* engines/glide/src/glide_gtk2_support.c:
	* engines/glide/src/glide_gtk2_support.h:
	* engines/redmond/src/redmond_gtk2_drawing.c:
	* engines/redmond/src/redmond_gtk2_engine.c:
	* engines/redmond/src/redmond_gtk2_engine.h:
	* engines/redmond/src/redmond_gtk2_misc.c:
	* engines/redmond/src/redmond_gtk2_misc.h:
	* engines/support/cairo-support.c:
	* engines/support/cairo-support.h:
	- Move Glide/Redmond Pattern Fill into Support
	
	* engines/thinice/src/thinice_theme_draw.c:
	- Merge Tab function into Extension

2006-10-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_cairo_simple_border):
	- The fills overlapped if the two colors are the same causing edge
	  pixels not to be painted. Fixed with a special case.

2006-10-09  Thomas Wood  <thos@gnome.org>

	* engines/mist/src/mist-style.c: (mist_style_draw_handle): Don't draw
	boxes around handles on gnome-panels

2006-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	- Add a --disable-all option, so that it is possible to build one
	  engine without requiring to disable every other engine manually.

2006-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_cairo_simple_border):
	- One rectangle was placed wrong

2006-10-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c:
	* engines/support/cairo-support.h:
	- Add ge_cairo_stroke_rectangle helper function that uses cairo_fill
	internally
	- Make ge_cairo_simple_border use cairo_fill

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/crux/src/crux-draw.c: